--- a/src/components/registerForm/style.scss
+++ b/src/components/registerForm/style.scss
@@ -3,14 +3,22 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    &__form {
+    &__container {
+      width: 400px;
+      border-radius: 30px;
+      padding: 0 18px;
+      &__form {
         background: white;
-        width: 400px;
+        width: 100%;
         border-radius: 30px;
         box-shadow: 0 1px 20px 0 rgba(0, 0, 0, 0.1);
-        padding: 0 18px;
+        padding:18px;
     }
     &__avatar {
         padding: 30px;
     }
+    .logo-text {
+      font-family: 'itc_souvenirmedium';
+    }
+  }
 }
