--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -2,7 +2,15 @@
     text-align: initial;
     padding: 20px;
     position: fixed;
+    width: 100%;
     &__logo {
         width: 150px;
+    }
+    .action{
+      float: right;
+      font-size: 20px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
     }
 }
