feat(new function): add function to change avatar

--- a/src/components/registerForm/style.scss
+++ b/src/components/registerForm/style.scss
@@ -21,4 +21,10 @@
       font-family: 'itc_souvenirmedium';
     }
   }
+  .change-avatar {
+    font-size: 11px;
+    color: #2a9cff;
+    text-decoration: underline;
+    cursor: pointer;
+  }
 }
